--- a/_posts/2015-1-28-Lab-1.md
+++ b/_posts/2015-1-28-Lab-1.md
@@ -1,5 +1,35 @@
 ---
 layout: default
-title: "Lab 1: Setting up a development Environment"
+title: "Lab 1: Development Environment and Server Configuration"
 <!-- permalink: lab1.html -->
 ---
+
+###Setting up a develpoment Environment
+In this lab we will set up a development environment for use throughout the class. Our aim is to develop applications in an environment as close as possible to the final server our code is going to be deployed on. Aslo, having the same development environment for all students in class helps us debug your code faster.
+
+The following has been tested for Mac OS X. We anticipate that steps 1 and 2 might be different for other operating systems. You are responsible for reading the documentation in such cases.
+
+- Install [VirtualBox](https://www.virtualbox.org/)
+- Install [Vagrant](https://www.vagrantup.com/)
+-  Clone the [vagrant-dev repository](https://github.com/uiuc-web-programming/vagrant-dev.git) from the [class github account](https://github.com/uiuc-web-programming/) to your machine. You are encouraged to use the command line for interacting with git and github. So, use the following command:
+
+```bash 
+git clone https://github.com/uiuc-web-programming/vagrant-dev.git
+```
+As an alternative you can use a graphical client such as the [Github Mac Client](https://mac.github.com/)
+
+- Change to the `vagrant-dev` directory and inspect the Vagrantfile. In it we have defined what operating system we want for our virtual machine (Ubuntu in our case) and have also specified what ports of the virtual machine (Ubuntu) should be forwarded to what ports of the host machine (OS X)
+{% highlight bash%}
+cd vagrant-dev
+{% endhighlight %}
+
+- Boot up the virtual machine:
+{% highlight bash%}
+vagrant up
+{% endhighlight %}
+
+- SSH into the virtual machine once it has booted up:
+{% highlight bash%}
+vagrant ssh
+{% endhighlight %}
+
