--- a/_posts/2015-2-8-MP-1.md
+++ b/_posts/2015-2-8-MP-1.md
@@ -10,29 +10,30 @@ In this programming assignment, you will design and impelement a single-page web
 ###Required Features 
 Your webpage has to have the following features:
 
-1. All content within a single page
-2. Full-width horizontal stripes/sections layout including a header and a footer
-3.	Navigation bar which sticks to the top of the window when scrolling
-4.	Smooth scrolling when navigating to a different section using the navigation bar
-5.	Indicator of the current reading position visible in the navigation bar
-6.	Header section with a carousel/slider using a minimum of three slides	
-7.  A section with Multi-column content
-8.	A section which has horizontally and vertically centered content
-9.	A section which uses a fixed-position background image
-10.	A section which uses modal windows with additional content
-11.	Embedded content (e.g. video, map)
-12.	At least one use of CSS3 animations (e.g. fade in/out, transitions)
-13.	At least one use of scalable vector icons through CSS (e.g. FontAwesome)
-14.	Inclusion of social media icons
+1. All content must be laid out in a single page with full-width horizontal stripes/sections including a header and a footer
+![Example of Layout](http://courses.engr.illinois.edu/cs498rk1/images/mp1/2.png)
++	A top navigation bar that sticks to the top of the window when scrolling
++	Indicator of the current reading position visible in the navigation bar
++ 	Navigation bar must be larger when users are at the top of the page. As users start scrolling down, it should resize and become smaller.
++	Smooth scrolling when navigating to a different section using the navigation bar
++	A section with a carousel/slider using a minimum of three slides	
++  	A section with Multi-column content
++	A section which has horizontally and vertically centered content
++	A section which uses a fixed-position background image
++	A section which uses modal windows with additional content
++	Embedded video using HTML5 video tag
++	At least one use of CSS3 animations (e.g. fade in/out, transitions)
++	At least one use of scalable vector icons through CSS (e.g. FontAwesome)
++	Inclusion of social media icons
 
 ###Rules
-1.	This is an individual assignment. So, please do not collaborate with others.
-2.	There must be no use of content management systems, or frameworks (e.g. Bootstrap, Pure CSS, Foundation, etc.)
-3.	HTML tables cannot be used for layout	
-4.	The only Javascript framework which can be used is jQuery
-5.	The website must be servable through the provided GRUNT-based virtual machine
-6.	SASS/SCSS principles must be utilized (e.g. mix-ins, variables). Technically you can write plain CSS in SCSS files. That is not what we want.
-7.  If you think something you're doing might not be acceptable, please ask on Piazza.
+1.	This is an individual assignment. No collaboration is permitted.
++   It is not permitted to copy/paste code that is not your own. You are however free to look at different code sources for inspiration and clarity. All sources (code as well as reading material) that you reference to complete this assignment must be declared in the submission.
++	There must be no use of content management systems, or frameworks (e.g. Bootstrap, Pure CSS, Foundation, etc.). 
++	The only library that is allowed is jQuery
++	HTML tables cannot be used for layout	
++	SASS/SCSS principles must be utilized (e.g. mix-ins, variables). Technically you can write plain CSS in SCSS files. That is not what we want.
++ If you think something you're doing might not be acceptable, please ask on Piazza.
 
 
 ###Submission Details
