--- a/_posts/2015-2-8-MP-1.md
+++ b/_posts/2015-2-8-MP-1.md
@@ -8,14 +8,17 @@ title: "MP 0.1: Develop a Webpage!"
 In this programming assignment, you will design and impelement a single-page website with specified functionality and formatting using only HTML, SCSS, and Javascript. The content of the website is up to you. For example, the subject can be a company/organization, a product, or simply a personal/portfolio page. Through this assignment, you will be tested on your use of structured semantics present in HTML5 (e.g. header, canvas, video), CSS3 styling complexity (e.g. use of webfonts, animations, layout), and overall design as discussed in class.
 
 ###Required Features 
-Your webpage has to have the following features:
+Your webpage has to have the following features (the imges are shown as examples):
 
-1. All content must be laid out in a single page with full-width horizontal stripes/sections including a header and a footer
+1. Layout: All content must be laid out in a single page with full-width horizontal stripes/sections including a header and a footer
 ![Example of Layout](http://courses.engr.illinois.edu/cs498rk1/images/mp1/2.png)
-+	A top navigation bar that sticks to the top of the window when scrolling
-+	Indicator of the current reading position visible in the navigation bar
-+ 	Navigation bar must be larger when users are at the top of the page. As users start scrolling down, it should resize and become smaller.
-+	Smooth scrolling when navigating to a different section using the navigation bar
++	Sticky Navbar: A top navigation bar that sticks to the top of the window when scrolling
+![Example of Sticky Nav Bar](http://courses.engr.illinois.edu/cs498rk1/images/mp1/3.gif)
++	Position Indicator: Indicator of the current reading position visible in the navigation bar (see above gif for example)
++ 	Navbar Resizing: Navigation bar must be larger when users are at the top of the page. As users start scrolling down, it should resize and become smaller.
+![Example of Nav Bar Resizing](http://courses.engr.illinois.edu/cs498rk1/images/mp1/4.gif)
++	Smooth Scrolling: Smooth scrolling when navigating to a different section using the navigation bar
+![Example of Smooth Scrolling](http://courses.engr.illinois.edu/cs498rk1/images/mp1/5.gif)
 +	A section with a carousel/slider using a minimum of three slides	
 +  	A section with Multi-column content
 +	A section which has horizontally and vertically centered content
