first gif added

--- a/_posts/2015-2-8-MP-1.md
+++ b/_posts/2015-2-8-MP-1.md
@@ -10,9 +10,7 @@ In this programming assignment, you will design and impelement a single-page web
 ###Required Features 
 Your webpage has to have the following features (the imges are shown as examples):
 
-1. Layout: All content must be laid out in a single page with full-width horizontal stripes/sections including a header and a footer
-
-![Example of Layout](http://courses.engr.illinois.edu/cs498rk1/images/mp1/2.png)
+1. Layout: All content must be laid out in a single page with full-width horizontal stripes/sections including a header and a footer[Example of Layout](http://courses.engr.illinois.edu/cs498rk1/images/mp1/2.png)
 
 +	Sticky Navbar: A top navigation bar that sticks to the top of the window when scrolling
 
