--- a/_posts/2015-2-8-MP-1.md
+++ b/_posts/2015-2-8-MP-1.md
@@ -18,9 +18,7 @@ Your webpage has to have the following features (the imges are shown as examples
 
 +	Position Indicator: Indicator of the current reading position visible in the navigation bar (see above gif for example)
 
-+ 	Navbar Resizing: Navigation bar must be larger when users are at the top of the page. As users start scrolling down, it should resize and become smaller.
-
-![Example of Nav Bar Resizing](http://courses.engr.illinois.edu/cs498rk1/images/mp1/4.gif)
++ 	Navbar Resizing: Navigation bar must be larger when users are at the top of the page. As users start scrolling down, it should resize and become smaller. [Example of Nav Bar Resizing](http://courses.engr.illinois.edu/cs498rk1/images/mp1/4.gif)
 
 +	Smooth Scrolling: Smooth scrolling when navigating to a different section using the navigation bar
 
