all examples added

--- a/_posts/2015-2-8-MP-1.md
+++ b/_posts/2015-2-8-MP-1.md
@@ -24,14 +24,22 @@ Your webpage has to have the following features (the imges are shown as examples
 
 ![Example of Smooth Scrolling](http://courses.engr.illinois.edu/cs498rk1/images/mp1/5.gif)
 
-+	A section with a carousel/slider using a minimum of three slides	
-+  	A section with Multi-column content
-+	A section which has horizontally and vertically centered content
-+	A section which uses a fixed-position background image
-+	A section which uses modal windows with additional content
-+	Embedded video using HTML5 video tag
-+	At least one use of CSS3 animations (e.g. fade in/out, transitions)
++	Carousel: A section with a carousel/slider using a minimum of three slides. [Example Carousel](http://courses.engr.illinois.edu/cs498rk1/images/mp1/6.png)
+
++  	Multi-column layout: A section with Multi-column content [Example Multi-column content](http://courses.engr.illinois.edu/cs498rk1/images/mp1/7.png)
+
++	Centering: A section which has horizontally and vertically centered content [Example Centering](http://courses.engr.illinois.edu/cs498rk1/images/mp1/8.png)
+
++	Background Image: A section which uses a fixed-position background image [Example Multi-column content](http://courses.engr.illinois.edu/cs498rk1/images/mp1/9.gif)
+
++	Modal: A section which uses modal windows with additional content [Example Modal](http://courses.engr.illinois.edu/cs498rk1/images/mp1/10.gif)
+
++	Video: Embedded video using HTML5 video tag [Example video](http://courses.engr.illinois.edu/cs498rk1/images/mp1/11.gif)
+
++	CSS3 Animations: At least one use of CSS3 animations (e.g. fade in/out, transitions)
+
 +	At least one use of scalable vector icons through CSS (e.g. FontAwesome)
+
 +	Inclusion of social media icons
 
 ###Rules
