--- a/_posts/2015-2-8-MP-1.md
+++ b/_posts/2015-2-8-MP-1.md
@@ -11,7 +11,7 @@ In this programming assignment, you will design and impelement a single-page web
 Your webpage has to have the following features (the imges are shown as examples):
 
 1. Layout: All content must be laid out in a single page with full-width horizontal stripes/sections including a header and a footer 
-[Example of Layout](http://courses.engr.illinois.edu/cs498rk1/images/mp1/2.png)
+- [Example](http://courses.engr.illinois.edu/cs498rk1/images/mp1/2.png)
 
 +	Sticky Navbar: A top navigation bar that sticks to the top of the window when scrolling
 
@@ -19,23 +19,23 @@ Your webpage has to have the following features (the imges are shown as examples
 
 +	Position Indicator: Indicator of the current reading position visible in the navigation bar (see above gif for example)
 
-+ 	Navbar Resizing: Navigation bar must be larger when users are at the top of the page. As users start scrolling down, it should resize and become smaller. [Example of Nav Bar Resizing](http://courses.engr.illinois.edu/cs498rk1/images/mp1/4.gif)
++ 	Navbar Resizing: Navigation bar must be larger when users are at the top of the page. As users start scrolling down, it should resize and become smaller - [Example](http://courses.engr.illinois.edu/cs498rk1/images/mp1/4.gif)
 
 +	Smooth Scrolling: Smooth scrolling when navigating to a different section using the navigation bar
 
 ![Example of Smooth Scrolling](http://courses.engr.illinois.edu/cs498rk1/images/mp1/5.gif)
 
-+	Carousel: A section with a carousel/slider using a minimum of three slides. [Example Carousel](http://courses.engr.illinois.edu/cs498rk1/images/mp1/6.png)
++	Carousel: A section with a carousel/slider using a minimum of three slides - [Example](http://courses.engr.illinois.edu/cs498rk1/images/mp1/6.png)
 
-+  	Multi-column layout: A section with Multi-column content [Example Multi-column content](http://courses.engr.illinois.edu/cs498rk1/images/mp1/7.png)
++  	Multi-column layout: A section with Multi-column content - [Example](http://courses.engr.illinois.edu/cs498rk1/images/mp1/7.png)
 
-+	Centering: A section which has horizontally and vertically centered content [Example Centering](http://courses.engr.illinois.edu/cs498rk1/images/mp1/8.png)
++	Centering: A section which has horizontally and vertically centered content - [Example](http://courses.engr.illinois.edu/cs498rk1/images/mp1/8.png)
 
-+	Background Image: A section which uses a fixed-position background image [Example Multi-column content](http://courses.engr.illinois.edu/cs498rk1/images/mp1/9.gif)
++	Background Image: A section which uses a fixed-position background image - [Example](http://courses.engr.illinois.edu/cs498rk1/images/mp1/9.gif)
 
-+	Modal: A section which uses modal windows with additional content [Example Modal](http://courses.engr.illinois.edu/cs498rk1/images/mp1/10.gif)
++	Modal: A section which uses modal windows with additional content - [Example](http://courses.engr.illinois.edu/cs498rk1/images/mp1/10.gif)
 
-+	Video: Embedded video using HTML5 video tag [Example video](http://courses.engr.illinois.edu/cs498rk1/images/mp1/11.gif)
++	Video: Embedded video using HTML5 video tag - [Example](http://courses.engr.illinois.edu/cs498rk1/images/mp1/11.gif)
 
 +	CSS3 Animations: At least one use of CSS3 animations (e.g. fade in/out, transitions)
 
