--- a/_posts/2015-2-8-MP-1.md
+++ b/_posts/2015-2-8-MP-1.md
@@ -8,21 +8,17 @@ title: "MP 0.1: Develop a Webpage!"
 In this programming assignment, you will design and impelement a single-page website with specified functionality and formatting using only HTML, SCSS, and Javascript. The content of the website is up to you. For example, the subject can be a company/organization, a product, or simply a personal/portfolio page. Through this assignment, you will be tested on your use of structured semantics present in HTML5 (e.g. header, canvas, video), CSS3 styling complexity (e.g. use of webfonts, animations, layout), and overall design as discussed in class.
 
 ###Required Features 
-Your webpage has to have the following features (the imges are shown as examples):
+Below we list the features your webpage should have (and will be graded on). Note that the examples are only meant to better illustrate the features. You do not have to make you webpage look similar to the examples. You just have to incorporate that feature in some form. 
 
 1. Layout: All content must be laid out in a single page with full-width horizontal stripes/sections including a header and a footer - [Example](http://courses.engr.illinois.edu/cs498rk1/images/mp1/2.png)
 
-+	Sticky Navbar: A top navigation bar that sticks to the top of the window when scrolling
-
-![Example of Sticky Nav Bar](http://courses.engr.illinois.edu/cs498rk1/images/mp1/3.gif)
++	Sticky Navbar: A top navigation bar that sticks to the top of the window when scrolling [Example](http://courses.engr.illinois.edu/cs498rk1/images/mp1/3.gif)
 
 +	Position Indicator: Indicator of the current reading position visible in the navigation bar (see above gif for example)
 
 + 	Navbar Resizing: Navigation bar must be larger when users are at the top of the page. As users start scrolling down, it should resize and become smaller - [Example](http://courses.engr.illinois.edu/cs498rk1/images/mp1/4.gif)
 
-+	Smooth Scrolling: Smooth scrolling when navigating to a different section using the navigation bar
-
-![Example of Smooth Scrolling](http://courses.engr.illinois.edu/cs498rk1/images/mp1/5.gif)
++	Smooth Scrolling: Smooth scrolling when navigating to a different section using the navigation bar [Example](http://courses.engr.illinois.edu/cs498rk1/images/mp1/5.gif)
 
 +	Carousel: A section with a carousel/slider using a minimum of three slides - [Example](http://courses.engr.illinois.edu/cs498rk1/images/mp1/6.png)
 
@@ -51,7 +47,9 @@ Your webpage has to have the following features (the imges are shown as examples
 +	SASS/SCSS principles must be utilized (e.g. mix-ins, variables). Technically you can write plain CSS in SCSS files. That is not what we want.
 + If you think something you're doing might not be acceptable, please ask on Piazza.
 
+###Grading Scheme
+We are planning 
 
 ###Submission Details
-To be released.
+To be released soon.
 
