all examples added

--- a/_posts/2015-2-8-MP-1.md
+++ b/_posts/2015-2-8-MP-1.md
@@ -48,7 +48,25 @@ Below we list the features your webpage should have (and will be graded on). Not
 + If you think something you're doing might not be acceptable, please ask on Piazza.
 
 ###Grading Scheme
-We are planning 
+We are planning on having peer reviews for your submissions. Your final grade for the MP will have the following weightage:
+- grade for your submission - 90%
+- validity of the peer grades you assign to others - 10%
+
+The grade for you assignment will have the following weightage:
+- 	Layout - 5%
+-	Sticky Navbar - 5%
+-	Position Indicator - 5%
+- 	Navbar Resizing - 5%
+-	Smooth Scrolling - 5%
+-	Carousel - 5%
+-  	Multi-column layout - 5%
+-	Centering - 5%
+-	Background Image - 5%
+-	Modal - 5%
+-	Video - 5%
+-	CSS3 Animations - 5%
+-	Scalable vector icons - 2.5%
+-	Inclusion of social media icons - 2.5%
 
 ###Submission Details
 To be released soon.
