removed some whitespace

--- a/_posts/2015-2-8-MP-1.md
+++ b/_posts/2015-2-8-MP-1.md
@@ -5,37 +5,26 @@ title: "MP 0.1: Develop a Webpage!"
 ---
 
 ###Overview
-In this programming assignment, you will design and impelement a single-page website with specified functionality and formatting using only HTML, SCSS, and Javascript. The content of the website is up to you. For example, the subject can be a company/organization, a product, or simply a personal/portfolio page. Through this assignment, you will be tested on your use of structured semantics present in HTML5 (e.g. header, canvas, video), CSS3 styling complexity (e.g. use of webfonts, animations, layout), and overall design as discussed in class.
+In this programming assignment, you will design and impelement a single-page website with specified functionality and formatting using only HTML, SCSS, and Javascript. The content of the website is up to you. For example, the subject can be a company/organization, a product, or simply a personal/portfolio page. Through this assignment, you will be tested on your use of structured semantics present in HTML5 (e.g. header, canvas, video), CSS3 styling complexity (e.g. use of webfonts, animations, layout), and creative use of Javascript and jQuery.
+
+Refer to the writeup for Lab 1 on how to set up a development environment and a server for this assignment. 
 
 ###Required Features 
 Below we list the features your webpage should have (and will be graded on). Note that the examples are only meant to better illustrate the features. You do not have to make you webpage look similar to the examples. You just have to incorporate that feature in some form. 
 
 1. Layout: All content must be laid out in a single page with full-width horizontal stripes/sections including a header and a footer - [Example](http://courses.engr.illinois.edu/cs498rk1/images/mp1/2.png)
-
 +	Sticky Navbar: A top navigation bar that sticks to the top of the window when scrolling [Example](http://courses.engr.illinois.edu/cs498rk1/images/mp1/3.gif)
-
 +	Position Indicator: Indicator of the current reading position visible in the navigation bar (see above gif for example)
-
 + 	Navbar Resizing: Navigation bar must be larger when users are at the top of the page. As users start scrolling down, it should resize and become smaller - [Example](http://courses.engr.illinois.edu/cs498rk1/images/mp1/4.gif)
-
 +	Smooth Scrolling: Smooth scrolling when navigating to a different section using the navigation bar [Example](http://courses.engr.illinois.edu/cs498rk1/images/mp1/5.gif)
-
 +	Carousel: A section with a carousel/slider using a minimum of three slides - [Example](http://courses.engr.illinois.edu/cs498rk1/images/mp1/6.png)
-
 +  	Multi-column layout: A section with Multi-column content - [Example](http://courses.engr.illinois.edu/cs498rk1/images/mp1/7.png)
-
 +	Centering: A section which has horizontally and vertically centered content - [Example](http://courses.engr.illinois.edu/cs498rk1/images/mp1/8.png)
-
 +	Background Image: A section which uses a fixed-position background image - [Example](http://courses.engr.illinois.edu/cs498rk1/images/mp1/9.gif)
-
 +	Modal: A section which uses modal windows with additional content - [Example](http://courses.engr.illinois.edu/cs498rk1/images/mp1/10.gif)
-
 +	Video: Embedded video using HTML5 video tag - [Example](http://courses.engr.illinois.edu/cs498rk1/images/mp1/11.gif)
-
 +	CSS3 Animations: At least one use of CSS3 animations (e.g. fade in/out, transitions)
-
 +	At least one use of scalable vector icons through CSS (e.g. FontAwesome)
-
 +	Inclusion of social media icons
 
 ###Rules
@@ -49,38 +38,26 @@ Below we list the features your webpage should have (and will be graded on). Not
 
 ###Grading Scheme
 We are planning on having peer reviews for your submissions. Your final grade for the MP will have the following weightage:
-- grade for your submission - 90%
-- validity of the peer grades you assign to others - 10%
+
+1. Grade for your submission - 90%
++ validity of the peer grades you assign to others - 10%
 
 The grade for you assignment will have the following weightage:
 
-- 	Layout - 5%
-
--	Sticky Navbar - 5%
-
--	Position Indicator - 5%
-
-- 	Navbar Resizing - 5%
-
--	Smooth Scrolling - 5%
-
--	Carousel - 5%
-
--  	Multi-column layout - 5%
-
--	Centering - 5%
-
--	Background Image - 5%
-
--	Modal - 5%
-
--	Video - 5%
-
--	CSS3 Animations - 5%
-
--	Scalable vector icons - 2.5%
-
--	Inclusion of social media icons - 2.5%
+1. 	Layout - 5%
++	Sticky Navbar - 5%
++	Position Indicator - 5%
++ 	Navbar Resizing - 5%
++	Smooth Scrolling - 5%
++	Carousel - 5%
++  	Multi-column layout - 5%
++	Centering - 5%
++	Background Image - 5%
++	Modal - 5%
++	Video - 5%
++	CSS3 Animations - 5%
++	Scalable vector icons - 2.5%
++	Inclusion of social media icons - 2.5%
 
 ###Submission Details
 To be released soon.
