--- a/_posts/2015-2-8-MP-1.md
+++ b/_posts/2015-2-8-MP-1.md
@@ -7,7 +7,7 @@ title: "MP 0.1: Develop a Webpage!"
 ###Overview
 In this programming assignment, you will design and impelement a single-page website with specified functionality and formatting using only HTML, SCSS, and Javascript. The content of the website is up to you. For example, the subject can be a company/organization, a product, or simply a personal/portfolio page. Through this assignment, you will be tested on your use of structured semantics present in HTML5 (e.g. header, canvas, video), CSS3 styling complexity (e.g. use of webfonts, animations, layout), and creative use of Javascript and jQuery.
 
-Refer to the writeup for Lab 1 on how to set up a development environment and a server for this assignment. 
+Refer to the writeup for Lab 1 for setting up a development environment and a server for this assignment. 
 
 ###Required Features 
 Below we list the features your webpage should have (and will be graded on). Note that the examples are only meant to better illustrate the features. You do not have to make you webpage look similar to the examples. You just have to incorporate that feature in some form. 
@@ -18,8 +18,8 @@ Below we list the features your webpage should have (and will be graded on). Not
 + 	Navbar Resizing: Navigation bar must be larger when users are at the top of the page. As users start scrolling down, it should resize and become smaller - [Example](http://courses.engr.illinois.edu/cs498rk1/images/mp1/4.gif)
 +	Smooth Scrolling: Smooth scrolling when navigating to a different section using the navigation bar [Example](http://courses.engr.illinois.edu/cs498rk1/images/mp1/5.gif)
 +	Carousel: A section with a carousel/slider using a minimum of three slides - [Example](http://courses.engr.illinois.edu/cs498rk1/images/mp1/6.gif)
-+  	Multi-column layout: A section with Multi-column content - [Example](http://courses.engr.illinois.edu/cs498rk1/images/mp1/7.png)
-+	Centering: A section which has horizontally and vertically centered content - [Example](http://courses.engr.illinois.edu/cs498rk1/images/mp1/8.png)
++  	Multi-column layout: A section with Multi-column content - [Example](http://courses.engr.illinois.edu/cs498rk1/images/mp1/8.png)
++	Centering: Apply horizontally centering and vertically centered to content (they do not have to be applied to the same content). 
 +	Background Image: A section which uses a fixed-position background image - [Example](http://courses.engr.illinois.edu/cs498rk1/images/mp1/9.gif)
 +	Modal: A section which uses modal windows with additional content - [Example](http://courses.engr.illinois.edu/cs498rk1/images/mp1/10.gif)
 +	Video: Embedded video using HTML5 video tag - [Example](http://courses.engr.illinois.edu/cs498rk1/images/mp1/11.gif)
