--- a/_posts/2015-1-28-Lab-1.md
+++ b/_posts/2015-1-28-Lab-1.md
@@ -9,27 +9,75 @@ In this lab we will set up a development environment for use throughout the clas
 
 The following has been tested for Mac OS X. We anticipate that steps 1 and 2 might be different for other operating systems. You are responsible for reading the documentation in such cases.
 
-- Install [VirtualBox](https://www.virtualbox.org/)
-- Install [Vagrant](https://www.vagrantup.com/)
--  Clone the [vagrant-dev repository](https://github.com/uiuc-web-programming/vagrant-dev.git) from the [class github account](https://github.com/uiuc-web-programming/) to your machine. You are encouraged to use the command line for interacting with git and github. So, use the following command:
+1 - Install [VirtualBox](https://www.virtualbox.org/)
+
+2 - Install [Vagrant](https://www.vagrantup.com/)
+
+3 -  Clone the [vagrant-dev repository](https://github.com/uiuc-web-programming/vagrant-dev.git) from the [class github account](https://github.com/uiuc-web-programming/) to your machine. You are encouraged to use the command line for interacting with git and github. So, use the following command:
 
 ```bash 
 git clone https://github.com/uiuc-web-programming/vagrant-dev.git
 ```
 As an alternative you can use a graphical client such as the [Github Mac Client](https://mac.github.com/)
 
-- Change to the `vagrant-dev` directory and inspect the Vagrantfile. In it we have defined what operating system we want for our virtual machine (Ubuntu in our case) and have also specified what ports of the virtual machine (Ubuntu) should be forwarded to what ports of the host machine (OS X)
-{% highlight bash%}
+4 - Change to the `vagrant-dev` directory and inspect the Vagrantfile. In it we have defined what operating system we want for our virtual machine (Ubuntu in our case) and have also specified what ports of the virtual/guest machine (Ubuntu) should be forwarded to what ports of the host machine (OS X)
+
+```bash
 cd vagrant-dev
-{% endhighlight %}
+```
 
-- Boot up the virtual machine:
-{% highlight bash%}
+5 - Boot up the virtual machine:
+
+```bash
 vagrant up
-{% endhighlight %}
+```
+6 - SSH into the virtual machine once it has booted up:
 
-- SSH into the virtual machine once it has booted up:
-{% highlight bash%}
+```bash
 vagrant ssh
-{% endhighlight %}
+```
+
+7 - The `vagrant-dev` folder on your host machine is mounted as `/vagrant` in your guest machine. Change your directory to this folder. This folder remains synced between the two operating systems and is the ideal place to put your projects. That way  you can edit files using the editor on OS X and run them from the terminal in Ubuntu.
+
+```bash
+cd \vagrant
+```
+ 8 - Clone the [MP-1 starter code](https://github.com/uiuc-web-programming/mp1_starter) from the class github repo and inspect the files inside. 
+
+```bash
+git clone https://github.com/uiuc-web-programming/mp1_starter
+cd mp1_starter
+```
+10 - Install the NPM packages needed for the project. This reads the `package.json` files and installs the packages in the `node_packages` folder.
+
+```bash
+npm install
+```
+
+11 - Install front-end packages (only jQuery in our case) using bower. This reads the `bower.json` files and installs the packages in the `public/lib` folder.
+
+```bash
+bower install
+```
+
+12 - Now use grunt to compile the scss files. The output will be saved in `public/css` folder
+
+```bash
+grunt compass
+```
+13 - Now use grunt to uglify the javascript files. The output will be saved in `public/js` folder
+
+```bash
+grunt uglify
+```
+
+14 - Serve the files using grunt.
+
+```bash
+grunt
+```
+15 - Open your browser and point it to `localhost:3000`. You should see the served webpage there. If you leave grunt running and now make changes to the files in the `scss` folder, the `js` folder and the `public/index.html` file, you will see the webpage reload automatically. This is done through [grunt livereload](https://github.com/gruntjs/grunt-contrib-watch#optionslivereload). This way you can code away on your code editor without having to manually switch to the browser and reload to see the changes.
+
+16 - 
+
 
