--- a/_posts/2015-1-28-Lab-1.md
+++ b/_posts/2015-1-28-Lab-1.md
@@ -40,12 +40,12 @@ vagrant ssh
 7 - The `vagrant-dev` folder on your host machine is mounted as `/vagrant` in your guest machine. Change your directory to this folder. This folder remains synced between the two operating systems and is the ideal place to put your projects. That way  you can edit files using the editor on OS X and run them from the terminal in Ubuntu.
 
 ```bash
-cd \vagrant
+cd /vagrant
 ```
- 8 - Clone the [MP-1 starter code](https://github.com/uiuc-web-programming/mp1_starter) from the class github repo and inspect the files inside. 
+ 8 - Fork the [MP-1 starter code](https://github.com/uiuc-web-programming/mp1_starter) from the class github repo and inspect the files inside. 
 
 ```bash
-git clone https://github.com/uiuc-web-programming/mp1_starter
+git clone https://github.com/your-github-username/mp1_starter
 cd mp1_starter
 ```
 10 - Install the NPM packages needed for the project. This reads the `package.json` files and installs the packages in the `node_packages` folder.
@@ -76,8 +76,58 @@ grunt uglify
 ```bash
 grunt
 ```
-15 - Open your browser and point it to `localhost:3000`. You should see the served webpage there. If you leave grunt running and now make changes to the files in the `scss` folder, the `js` folder and the `public/index.html` file, you will see the webpage reload automatically. This is done through [grunt livereload](https://github.com/gruntjs/grunt-contrib-watch#optionslivereload). This way you can code away on your code editor without having to manually switch to the browser and reload to see the changes.
+15 - Open your browser and point it to `localhost:3000`. You should see the served webpage there. If you leave grunt running and now make changes to the files in the `scss` folder, the `js` folder and the `public/index.html` file, you will see the webpage reload automatically. This is done through [grunt livereload](https://github.com/gruntjs/grunt-contrib-watch#optionslivereload). This way you can code away on your code editor while seeing changes in the browser side by side.
 
-16 - 
+16 - Now implement MP1 by writing your code in the `scss` folder, the `js` folder and the `public/index.html` file. Push changes to your forked repo.
+
+###Setting up the Server
+
+1 - Get [Github Student Developer Pack](https://education.github.com/pack) and get the $100 in platform credit for [DigitalOcean](https://www.digitalocean.com/) 
+
+2 - [Create a droplet](https://www.digitalocean.com/community/tutorials/how-to-create-your-first-digitalocean-droplet-virtual-server) on DigitalOcean and log in to it
+
+3 - Get the install script from our vagrant-dev repo and run it
+
+```bash
+wget https://raw.githubusercontent.com/uiuc-web-programming/vagrant-dev/master/install.sh
+sh install.sh
+```
+
+4 - Create a mp1 folder on the server and upload the `app.js` file and the `public` folder from the mp1_starter on your local machine.
+
+```bash
+mkdir mp1
+exit #logout
+scp path_to_mp1_starter/app.js login_name@droplet_ip:~/mp1
+scp -r path_to_mp1_starter/public login_name@droplet_ip:~/mp1
+ssh login_name@droplet_ip  # log back in
+```
+
+5 - Start screen and serve the files by running the expressjs server. 
+
+```bash
+screen
+cd mp1
+node app.js
+```
+6 - The webpage should be up at http://droplet_ip:3000 . Check that in your browser.
+
+7 - Detach from screen and logout
+
+```
+ctrl+a followerd by d
+exit
+```
+
+8 - Keep the server running till MP 1 is graded. To stop the server in the future login to your droplet, reattach to screen and stop the server
+
+```
+ssh login_name@droplet_ip  # log back in
+screen -r
+ctrl+d
+exit # exit from screen
+exit # exit from server
+```
+
 
 
