added install script

--- a/_posts/2015-1-28-Lab-1.md
+++ b/_posts/2015-1-28-Lab-1.md
@@ -37,10 +37,11 @@ vagrant up
 vagrant ssh
 ```
 
-7 - The `vagrant-dev` folder on your host machine is mounted as `/vagrant` in your guest machine. Change your directory to this folder. This folder remains synced between the two operating systems and is the ideal place to put your projects. That way  you can edit files using the editor on OS X and run them from the terminal in Ubuntu.
+7 - The `vagrant-dev` folder on your host machine is mounted as `/vagrant` in your guest machine. Change your directory to this folder. This folder remains synced between the two operating systems and is the ideal place to put your projects. That way  you can edit files using the editor on OS X and run them from the terminal in Ubuntu. Now run the `install.sh` script present in that folder.
 
 ```bash
 cd /vagrant
+sh install.sh
 ```
  8 - Fork the [MP-1 starter code](https://github.com/uiuc-web-programming/mp1_starter) from the class github repo and inspect the files inside. 
 
