--- a/_posts/2015-1-28-Lab-1.md
+++ b/_posts/2015-1-28-Lab-1.md
@@ -42,6 +42,7 @@ vagrant ssh
 ```bash
 cd /vagrant
 sh install.sh
+source ~/.profile
 ```
  8 - Fork the [MP-1 starter code](https://github.com/uiuc-web-programming/mp1_starter) from the class github repo and inspect the files inside. 
 
