remove forking instruction

--- a/_posts/2015-1-28-Lab-1.md
+++ b/_posts/2015-1-28-Lab-1.md
@@ -6,7 +6,7 @@ title: "Lab 1: Development Environment and Server Configuration"
 
 ###Setting up a develpoment Environment
 
-<span style="color: red"> Step 8 has changed significantly! </span>
+<span style="color: red"> Attention: Step 8 has changed significantly! </span>
 
 In this lab we will set up a development environment for use throughout the class. Our aim is to develop applications in an environment as close as possible to the final server our code is going to be deployed on. Aslo, having the same development environment for all students in class helps us debug your code faster.
 
@@ -47,12 +47,23 @@ cd /vagrant
 sh install.sh
 source ~/.profile
 ```
- 8 - **Fork** the [MP-1 starter code](https://github.com/uiuc-web-programming/mp1_starter) from the class github repo (by clicking on the fork button on the top right). You'll have to have a github account to be able to do this. Then clone it to your machine and inspect the files inside by using the following commands
+ 8 - Create a github account and create a new repository named `mp1`. ***Set it to private***. Create a duplicate of the [MP-1 starter code](https://github.com/uiuc-web-programming/mp1_starter) from the class github repo by following the commands below 
 
 ```bash
-git clone https://github.com/your-github-username/mp1_starter
-cd mp1_starter
+git clone --bare https://github.com/uiuc-web-programming/mp1_starter.git
+cd mp1_starter.git
+git push --mirror https://github.com/your-github-username/mp1.git
+# Mirror-push to your mp1 repository. Use your github username in the command.
+cd ..
+rm -rf mp1_starter.git
 ```
+Then clone it to your machine and inspect the files inside by using the following commands
+
+```bash
+git clone https://github.com/your-github-username/mp1
+cd mp1
+```
+
 10 - Install the NPM packages needed for the project. This reads the `package.json` files and installs the packages in the `node_packages` folder. If you have Windows on your host machine you need to add the `--no-bin-links` option to this command.
 
 ```bash
