added angular file structure

--- a/_posts/2015-2-23-MP-2.md
+++ b/_posts/2015-2-23-MP-2.md
@@ -7,47 +7,60 @@ due: Mar 11, 11.59PM CST
 ### Due Date - March 11, 2015, 11.59PM CST
 
 ###Overview
-In this programming assignment you will make your single-page website responsive, improve its visual design, and implement a seperate front-end interface using AngularJS. The assignment is broken down into three parts and an additional extra credit part. Part C is independent of Parts A and B and can be worked on without completing part A or B. Also, please read all parts before you work on this MP as there might be a potential for saving work by being creative.
+In this programming assignment you will make your single-page website responsive, improve its visual design, and implement a separate front-end interface using AngularJS. The assignment has three parts (and an additional extra credit part.) Part C is independent of Parts A and B and can be worked on without completing part A or B, but please read through the entire MP before you start.
 
 You can use the development environment and server setup you used for MP 1. Refer to Lab 2 for details about the MP 2 starter code. 
 
 ###Part A: Responsive Design
-For this part, you are to implement your webpage from MP 1 using the [Foundation front-end framework](http://foundation.zurb.com/docs/) from the ground up. This is so that you can make your webpage responsive and can use some of the other components (say naviagtion bar) that foundation provides.
+Goal: Rewrite your website from MP 1 using the [Foundation front-end framework](http://foundation.zurb.com/docs/) to make it responsive. You will also have the opportunity to use third-party UI components to achieve the same functionality (i.e., navigation bar, carousel) with fewer lines of code.
 
-Please adhere to the following rules for this part:
+Requirements:
 
 1. Keep the content the same as your MP 1 webpage. 
-+ You should not be using css/scss/javascript that is written from scratch (including your scss and javascript that you developed for MP 1).
++ Start from scratch -- don't borrow code from MP1. Borrowing code from MP 1 will probably cause more problems and not actually save you time since most of the code will need to be rewritten.
 + Responsiveness: Your webpage needs to be responsive and have visible changes when going from large to medium and medium to small screen sizes. These changes have to be intentional and well thought out. You will have to submit a writeup that lists these changes (at least three) and the rationale behind them.
 + You are free to use any component that Foundation provides (such as buttons, drop-down menus etc.) if it makes sense for your website. The [Foundation documentation page](http://foundation.zurb.com/docs/) lists all such components on the left side of the page.
 + You are free to use any third party plugins or libraries as you deem fit. For example, you can implement your carousel using [Slick Carousel](http://kenwheeler.github.io/slick/).
-+ You will get full credit for this part even if you do not change the default styles of foundation components and other libraries.
++ You will get full credit for this part even if you do not change the default styling of foundation/third-party components.
 
 ###Part B: Visual Design
-For this part, you are to improve the visual design of the webpage from Part A. Here are some specific things you can do:
+Goal: Improve the visual design of the webpage from Part A. Here are some specific things you can do:
 
-1. Take your peer feedback from MP 1 into account to identify areas of visual design that needs to be improved for your website. Examples of these could be better layout, better color schemes, better typography etc. You will have to submit a writeup that lists these areas (at least three) and how you improved them.
-+ To get to your intended visual design, modify the default style of Foundation components by modifying the foundation scss files in `public/foundation/scss`. Also, the [Foundation documentation](http://foundation.zurb.com/docs/) for each component tell you what to change in the sass files to change the styling of that component.
-+ Additional styles that you need can then be added to the scss files in `scss` folder like you did in MP 1.
-+ Overall, implement a consistent theme throughout the website. For example, you should:
-	* use the same (two or three) fonts throughout the website
-	+ have the same color scheme throughout the website
-	+ have similar whitespacing for different elements
+1. Using the peer feedback from MP 1, identify aspects of the site's visual design that could be improved: better layout, color schemes, typography etc. You will have to submit a writeup that lists these areas (at least three) and how you improved them.
++ To customize Foundation components, modify the foundation scss files in `public/foundation/scss`. The [Foundation documentation](http://foundation.zurb.com/docs/) describes the available sass variables/mixins for each component.
++ Additional styles can also be added to the scss files in `scss` folder like you did in MP 1.
++ Your redesign should draw on the visual design principles discussed in class:
+    + functionally similar elements should have similar styling; functionally different elements should be styled differently
+    + contrast should be used to give visual weight to important areas
+    + use variations in font, size, weight, and style to create typographic contrast
+	+ use whitespace to perceptually group related elements and separate semantically different areas
+    + use margins, leading, and adequate background/text color contrast to make text more readable
+    + choose fonts and colors that match the mood/message/content of your site
 
 
 ###Part C: AngularJS Front-End Design
-For this part, you are to create a single-page AngularJS app that lets users interact with the data from the [IMDB top 250 movies](http://www.imdb.com/chart/top). We have provided you the data in JSON format in `public/data/imdb250.json` along with poster images for the movies in `public/data/images`. The images are named using the `imdbID` for each movies. 
-
-You should create a new HTML page at `public/imdb250.html` and write your AngularJS code in the `js` folder (your controllers can go in `js/controllers.js` for example). 
+Goal: Create a single-page AngularJS app that lets users interact with the data from the [IMDB top 250 movies](http://www.imdb.com/chart/top). We've already crawled the data and formatted it as JSON: `public/data/imdb250.json`. We also downloaded the corresponding poster images for each movie: `public/data/images`. The images are named using the `imdbID` for each movies. 
 
 Your app should have the following features:
 
-1. Two different list views of the data. The first one should list all the movie names. The second one should display all the movie thumbnails. 
-+ Both views should have a search bar that would help filter the names in the list. It should filter the list as you type.
-+ Both views should have a list of categories that allows the users to further narrow down the search results. 
-+ When any of the items in the list views is clicked, complete information about that movie should appear. This view should have previous and next buttons (can be implemented with arrows) and should work with keyboard arrow buttons. Also, this view should only show you movies that were in the shortened list after applying search and categories selection inputs to the entire list. There should also be a way to go back to the list view.
+1. A list view where users can input a search query and the app returns a list of movies that match the query. There should also be a way to sort the search results based on different properties of the results (such as the name or rank) and of specifying an ordering (ascending and descending). Also, the search bar should filter as you type.
++ A gallery view that displays the movie posters for all the movies. There should be a way to select movies from different genres in the gallery.
++ When an item in search view or the gallery view is clicked, the app should display the different attributes of the selected movie (from the JSON file). Also, this view should have previous and next buttons (can be implemented with arrows) that lets the user cycle through the list of movies. 
++ You app should use animations wherever appropriate (at least once).
++ You should use partials
++ You are free to use Foundation's components (such as the grid etc. ) for this part as long as it is used for styling and not used to implement the core functionality of the app.
 
 You can see a demo of a sample app in the video below:
+
+[[embed url=https://www.youtube.com/watch?v=_xZYYViPvig]]
+
+
+You recommend you to use the following project structure:
+1. The main HTML file for this app should be `public/imdb250.html`. It should contain the code that is common to all views in the app. For example, you can include all CSS and JavaScript files here.  
++ Your app has three main views (one for the list, one for the gallery and the other for displaying the details of a particuar movie). These should be implemented using three different [Angular routing and partial templates](https://docs.angularjs.org/tutorial/step_07). You can implement them in the three files in `public/partials`
++ Your Angular code should go in `js/app.js` except for the conrollers. The controllers should be in `js/controllers.js`. 
++ For styling, you can use the scss files in `scss` folder like you did in MP 1 or write a css file or borrow css/scss from elsewhere (such as from Foundation).
+
 
 Also, here is a list of angular components that you might find useful
 
@@ -63,8 +76,8 @@ For the complete list, please refer to the [Angular documentation](https://docs.
  
 
 ###Part D: Extra Credit
-1. Load data for your website (Part B) from a JSON file using AngularJS. 
-+ Implement another view for Part C that lets you explore the data in a different way. You can be creative about this and think about how you go about searching for a movie to watch.
+1. Incorporate a data into your website from Part B. The dataset should be comparable in size to the IMDB dataset we provided. It should be read in from a JSON file and visualized on the site using Angular's client-side templating functionality.
++ Design and implement another view for Part C that lets you explore the data in a different way: think about the principles of user-centered design that we covered in class.
 
 ###Rules
 1.	This is an individual assignment. No collaboration is permitted.
@@ -83,6 +96,5 @@ This part will be graded on functionality that is implemented and not on the vis
 
 
 ###Submission Details
-1. Use [this form]() to submit your MP.
-2. Make sure you set your Github repo to public two days after the deadline. 
+Coming soon.
 
