--- a/_posts/2015-2-23-Lab-2.md
+++ b/_posts/2015-2-23-Lab-2.md
@@ -19,5 +19,15 @@ cd \vagrant
 git clone https://github.com/uiuc-web-programming/mp2_starter.git
 ```
 
-4 - Install the necessary npm and bower modules, get the 
-4 - To be able to debug AgularJS code in the chrome developer tools, you should install the [AngularJS Batarang (Stable)](https://chrome.google.com/webstore/detail/angularjs-batarang-stable/niopocochgahfkiccpjmmpchncjoapek) plugin. Some other AngularJS debugging tips can be found [in this article](http://ionicframework.com/blog/angularjs-console/)
+4 - Install the necessary npm and bower modules, uglify the Javascript, compile the scss files and finally serve the sample webpage
+```bash
+npm install
+bower install
+grunt uglify
+grunt compass
+grunt
+```
+
+You shoud be able to see the sample webpage at `http://localhost:3000`. It uses both Foundation and AngularJS.
+
+5 - To be able to debug AgularJS code in the chrome developer tools, you should install the [AngularJS Batarang (Stable)](https://chrome.google.com/webstore/detail/angularjs-batarang-stable/niopocochgahfkiccpjmmpchncjoapek) plugin. Some other AngularJS debugging tips can be found [in this article](http://ionicframework.com/blog/angularjs-console/)
