--- a/_posts/2015-2-23-MP-2.md
+++ b/_posts/2015-2-23-MP-2.md
@@ -52,7 +52,7 @@ Your app should have the following features:
 
 You can see a demo of a sample app in the video below:
 
-[[embed url=https://www.youtube.com/watch?v=_xZYYViPvig]]
+<iframe width="420" height="315" src="https://www.youtube.com/watch?v=_xZYYViPvig" frameborder="0" allowfullscreen></iframe>
 
 
 You recommend you to use the following project structure:
