--- a/_posts/2015-2-23-MP-2.md
+++ b/_posts/2015-2-23-MP-2.md
@@ -50,10 +50,7 @@ Your app should have the following features:
 + You should use partials
 + You are free to use Foundation's components (such as the grid etc. ) for this part as long as it is used for styling and not used to implement the core functionality of the app.
 
-You can see a demo of a sample app in the video below:
-
-<iframe width="420" height="315" src="https://www.youtube.com/watch?v=_xZYYViPvig" frameborder="0" allowfullscreen></iframe>
-
+You can see a demo of a sample app in [this video](https://www.youtube.com/watch?v=_xZYYViPvig)
 
 You recommend you to use the following project structure:
 1. The main HTML file for this app should be `public/imdb250.html`. It should contain the code that is common to all views in the app. For example, you can include all CSS and JavaScript files here.  
