added some tips

--- a/_posts/2015-2-23-MP-2.md
+++ b/_posts/2015-2-23-MP-2.md
@@ -50,9 +50,10 @@ Your app should have the following features:
 + You should use partials
 + You are free to use Foundation's components (such as the grid etc. ) for this part as long as it is used for styling and not used to implement the core functionality of the app.
 
-You can see a demo of a sample app in [this video](https://www.youtube.com/watch?v=_xZYYViPvig)
+You can see a demo of a sample app in [this video](https://www.youtube.com/watch?v=_xZYYViPvig).
 
 You recommend you to use the following project structure:
+
 1. The main HTML file for this app should be `public/imdb250.html`. It should contain the code that is common to all views in the app. For example, you can include all CSS and JavaScript files here.  
 + Your app has three main views (one for the list, one for the gallery and the other for displaying the details of a particuar movie). These should be implemented using three different [Angular routing and partial templates](https://docs.angularjs.org/tutorial/step_07). You can implement them in the three files in `public/partials`
 + Your Angular code should go in `js/app.js` except for the conrollers. The controllers should be in `js/controllers.js`. 
@@ -91,6 +92,22 @@ This part will be graded mainly on visual design.
 This part will be graded on functionality that is implemented and not on the visual design.
 + Part D: Extra Credit - 10% (5% for each part)
 
+###Tips
+
+1. To be able to debug AgularJS code in the chrome developer tools, you should install the [AngularJS Batarang (Stable)](https://chrome.google.com/webstore/detail/angularjs-batarang-stable/niopocochgahfkiccpjmmpchncjoapek) plugin. Some other AngularJS debugging tips can be found [in this article](http://ionicframework.com/blog/angularjs-console/)
++ Also, if you have problems debugging your JavaScript due to uglification, you can disable it by commenting out line 46 of Gruntfile.js and uncommenting line 47. Your final submission for MP 2 should work with uglification though.
++ Uglification/minification of Angular code can result in undesirable changes (due to change in function parameter names). One thing you can do to avoid this is to always decare your controllers as: 
+```javascript
+imdbControllers.controller('myController', ['$scope', '$http', function($scope, $http) {
+  
+}]);
+```
+instead of:
+```javascript
+imdbControllers.controller('myController', function($scope, $http) {
+}); 
+```
+This prevents the function parameter names from being changes.
 
 ###Submission Details
 Coming soon.
