corrected git clone instructions

--- a/_posts/2015-2-23-Lab-2.md
+++ b/_posts/2015-2-23-Lab-2.md
@@ -14,10 +14,21 @@ vagrant ssh
 cd \vagrant
 ```
 
-3 -  Clone the [MP2 starter kit repository](https://github.com/uiuc-web-programming/mp2_starter.git).
+3 -  Go to your github account (or create one) and create a new repository named `mp2`. ***Set it to private*** (you'll have to activate the [Github student developer pack](https://education.github.com/pack) to be able to create private repos. The other option is to use [bitbucket](https://bitbucket.org/)). [Create a duplicate](https://help.github.com/articles/duplicating-a-repository/) of the [MP-2 starter code](https://github.com/uiuc-web-programming/mp2_starter) from the class github repo by using the commands below 
 
-```bash 
-git clone https://github.com/uiuc-web-programming/mp2_starter.git
+```bash
+git clone --bare https://github.com/uiuc-web-programming/mp2_starter.git
+cd mp2_starter.git
+git push --mirror https://github.com/your-github-username/mp2.git
+# Mirror-push to your mp1 repository. Use your github username in the URL. Change the URL if you're using bitbucket.
+cd ..
+rm -rf mp2_starter.git
+```
+Then clone it to your machine and inspect the files inside by using the following commands
+
+```bash
+git clone https://github.com/your-github-username/mp2
+cd mp2
 ```
 
 4 - Install the necessary npm and bower modules, uglify the Javascript, compile the scss files and finally serve the sample webpage
