corrected git clone instructions

--- a/_posts/2015-2-23-Lab-2.md
+++ b/_posts/2015-2-23-Lab-2.md
@@ -43,4 +43,6 @@ grunt
 
 You shoud be able to see the sample webpage at `http://localhost:3000`. It uses both Foundation and AngularJS.
 
+5 - If you use additional libraries, make sure that all such libraries get installed when we do `npm install` and `bower install` after cloning your MP 2 code repo (this can be done by adding the libraries in the `packages.json` or `bower.json` file. 
+
 
