--- a/_posts/2015-2-23-MP-2.md
+++ b/_posts/2015-2-23-MP-2.md
@@ -22,7 +22,7 @@ Requirements:
 + Start from scratch -- don't borrow code from MP1. Borrowing code from MP 1 will probably cause more problems and not actually save you time since most of the code will need to be rewritten.
 + Responsiveness: Your webpage needs to be responsive and have visible changes when going from large to medium and medium to small screen sizes. These changes have to be intentional and well thought out. You will have to submit a writeup that lists these changes (at least three) and the rationale behind them.
 + You are free to use any component that Foundation provides (such as buttons, drop-down menus etc.) if it makes sense for your website. The [Foundation documentation page](http://foundation.zurb.com/docs/) lists all such components on the left side of the page.
-+ You are free to use any third party plugins or libraries as you deem fit. For example, you can implement your carousel using [Slick Carousel](http://kenwheeler.github.io/slick/).
++ You are free to use any third party plugins or libraries as you deem fit. For example, you can implement your carousel using [Slick Carousel](http://kenwheeler.github.io/slick/). However, make sure that all such libraries get installed when we do `npm install` and `bower install` after cloning your MP 2 code repo (this can be done by adding the libraries in the `packages.json` or `bower.json` file. 
 + You will get full credit for this part even if you do not change the default styling of foundation/third-party components.
 
 ###Part B: Visual Design
