--- a/_posts/2015-2-23-MP-2.md
+++ b/_posts/2015-2-23-MP-2.md
@@ -83,6 +83,15 @@ For the complete list, please refer to the [Angular documentation](https://docs.
 1.	This is an individual assignment. No collaboration is permitted.
 +   It is not permitted to copy/paste code that is not your own. You are, however, free to look at different code sources for inspiration and clarity. All sources (code as well as reading material) that you reference to complete this assignment must be declared in the submission.
 + If you think something you're doing might not be acceptable, please ask on Piazza.
++ You should not use absolute paths to load any of your asset files (say css, images or js) from your server. For example, there should not be something like:
+```html
+<img src="/photos/skyline.jpg" />
+```
+They should all be relative paths like:
+```html
+<img src="./photos/skyline.jpg" />
+```
+This is needed because when we host your code for grading the folder structure on the server, the folder structure would be different from what it was on your server and things would not work. 
 
 ###Grade Breakdown
 
@@ -112,6 +121,7 @@ imdbControllers.controller('myController', function($scope, $http) {
 }); 
 ```
 This prevents the function parameter names from being changes.
+
 
 ###Submission Details
 Coming soon.
