--- a/_posts/2015-2-23-Lab-2.md
+++ b/_posts/2015-2-23-Lab-2.md
@@ -34,7 +34,7 @@ cd mp2
 4 - Install the necessary npm and bower modules, uglify the Javascript, compile the scss files and finally serve the sample webpage
 
 ```bash
-npm install
+npm install #if you are on Windows use: npm install --no-bin-links
 bower install
 grunt uglify
 grunt compass
