--- a/_posts/2015-2-23-Lab-2.md
+++ b/_posts/2015-2-23-Lab-2.md
@@ -11,7 +11,7 @@ title: "Lab 2.0: Setting up a Foundation project"
 ```bash 
 vagrant up
 vagrant ssh
-cd \vagrant
+cd /vagrant
 ```
 
 3 -  Go to your github account (or create one) and create a new repository named `mp2`. ***Set it to private*** (you'll have to activate the [Github student developer pack](https://education.github.com/pack) to be able to create private repos. The other option is to use [bitbucket](https://bitbucket.org/)). [Create a duplicate](https://help.github.com/articles/duplicating-a-repository/) of the [MP-2 starter code](https://github.com/uiuc-web-programming/mp2_starter) from the class github repo by using the commands below 
