--- a/_posts/2015-2-23-MP-2.md
+++ b/_posts/2015-2-23-MP-2.md
@@ -110,7 +110,7 @@ This part will be graded on functionality that is implemented and not on the vis
 
 1. To be able to debug AgularJS code in the chrome developer tools, you should install the [AngularJS Batarang (Stable)](https://chrome.google.com/webstore/detail/angularjs-batarang-stable/niopocochgahfkiccpjmmpchncjoapek) plugin. Some other AngularJS debugging tips can be found [in this article](http://ionicframework.com/blog/angularjs-console/)
 + Also, if you have problems debugging your JavaScript due to uglification, you can disable it by commenting out line 46 of Gruntfile.js and uncommenting line 47. Your final submission for MP 2 should work with uglification though.
-+ Uglification/minification of Angular code can result in undesirable changes (due to change in function parameter names). One thing you can do to avoid this is to always decare your controllers as: 
++ Uglification/minification of Angular code can result in undesirable changes (due to change in function parameter names). One thing you can do to avoid this is to always decare your controllers using the following template: 
 
 ```javascript
 imdbControllers.controller('myController', ['$scope', '$http', function($scope, $http) {
@@ -123,7 +123,7 @@ instead of:
 imdbControllers.controller('myController', function($scope, $http) {
 }); 
 ```
-This prevents the function parameter names from being changes.
+This prevents the function parameter names from being changed.
 
 
 ###Submission Details
