--- a/_posts/2015-2-23-MP-2.md
+++ b/_posts/2015-2-23-MP-2.md
@@ -89,7 +89,7 @@ For the complete list, please refer to the [Angular documentation](https://docs.
 src="/photos/skyline.jpg" 
 ```
 
-They should all be relative paths like:
+They should all be relative paths (from your index.html file if thats where you are including this asset) like:
 
 ```html
 src="./photos/skyline.jpg"
