added single asset folder rule

--- a/_posts/2015-2-23-MP-2.md
+++ b/_posts/2015-2-23-MP-2.md
@@ -71,6 +71,7 @@ Also, here is a list of angular components that you might find useful
 + [filter](https://docs.angularjs.org/api/ng/service/$filter)
 + [orderBy](https://docs.angularjs.org/api/ng/filter/orderBy)
 + [$http](https://docs.angularjs.org/api/ng/service/$http)
++ [ngSrc](https://docs.angularjs.org/api/ng/directive/ngSrc)
 
 For the complete list, please refer to the [Angular documentation](https://docs.angularjs.org/api/ng).
  
@@ -95,6 +96,7 @@ They should all be relative paths (from your index.html file if thats where you 
 src="./photos/skyline.jpg"
 ```
 This is needed because when we host your code for grading, the folder structure on our server would be different from what it was on your server and things would break. So, you have to make sure the code in your `public` folder works no matter where the public folder is placed on a server.
++ If you have additional assets (say pictures) you should create a new `public/assets` folder and put everything there or in its subfolders (say `public/assets/pics` and `public/assets/videos`). There should be no other place in your folder structure where you are loading assets from.
 
 ###Grade Breakdown
 
