--- a/_posts/2015-2-23-MP-2.md
+++ b/_posts/2015-2-23-MP-2.md
@@ -96,7 +96,7 @@ They should all be relative paths (from your index.html file if thats where you 
 src="./photos/skyline.jpg"
 ```
 This is needed because when we host your code for grading, the folder structure on our server would be different from what it was on your server and things would break. So, you have to make sure the code in your `public` folder works no matter where the public folder is placed on a server.
-+ If you have additional assets (say pictures) you should create a new `public/assets` folder and put everything there or in its subfolders (say `public/assets/pics` and `public/assets/videos`). There should be no other place in your folder structure where you are loading assets from.
++ If you have additional assets (say pictures) you should put them under `public/data` folder and put everything there or in its subfolders (say `public/data/pics` and `public/data/videos`). There should be no other place in your folder structure where you are loading assets from. For example, do not create a `css/images` directory.
 
 ###Grade Breakdown
 
