--- a/_posts/2015-2-23-Lab-2.md
+++ b/_posts/2015-2-23-Lab-2.md
@@ -37,7 +37,8 @@ cd mp2
 npm install #if you are on Windows use: npm install --no-bin-links
 bower install
 grunt uglify
-grunt compass
+grunt compass:dev
+grunt compass:foundation
 grunt
 ```
 
